# projet_ros2_crazyflie

./: .gitignore  .gitmodules  README.md  commande utile  package.xml  setup.py
config/: planner.yaml
crazyflie_localization/: package.xml  setup.cfg  setup.py
crazyflie_localization/crazyflie_localization/: localization.py
crazyflie_localization/launch/: localization_launch.py
crazyflie_localization/worlds/: map_gazebo.ply  map_gazebo2.ply  map_gazebo3.ply  sdf_to_ply.py  test.sdf  test2.sdf  test3.sdf
crazyflie_manual_3dcarto/: package.xml  setup.cfg  setup.py
crazyflie_manual_3dcarto/config/: rviz-real-config.rviz  rviz-sim-config.rviz
crazyflie_manual_3dcarto/crazyflie_manual_3dcarto/: interactive_marker_pose_stamped.py  save_points_cloud.py  scan_to_pcd.py  teleop_save.py
crazyflie_manual_3dcarto/launch/: launch.3dcarto_setup.py  simple_mapper_real.py  simple_mapper_simulation.py
drift_evaluator/: CMakeLists.txt  package.xml
drift_evaluator/include/: drift_evaluator_node.hpp
drift_evaluator/launch/: drift_evaluator.launch.py
drift_evaluator/src/: drift_evaluator_node.cpp
launch/: launchtest.launch.py
navigation3d/: package.xml  setup.cfg  setup.py
navigation3d/action/: FollowTrajectory
navigation3d/config/: planner.yaml
navigation3d/launch/: launchtest.launch.py  launchtest2.launch.py  navigation.launch.py
navigation3d/maps/: test27.bt
navigation3d/navigation3d/: goal_manager.py  interactive_marker_pose_stamped.py  planner.py  sfc_boxes.py  supervisor.py  trajectories_follower.py
navigation3d/rviz/: config.rviz
navigation3d/worlds/: oui.sdf  test.sdf  test2.sdf  test27.sdf  test3.sdf
navigation3d_interfaces/: CMakeLists.txt  package.xml
navigation3d_interfaces/action/: FollowTrajectory.action
pointcloud_builder/: cloud_assembler_node.py  goal_manager.py  planner.py  setup.py
pointcloud_builder/lib/: astar.py  octomap_reader.py
scripts/: convert_to_voxel_open3d.py  position_controller.py  position_controller2.py  run_sim.sh  scan_trajectory.yaml  scan_trajectory2.yaml
(+12 files in other folders)
